@startuml
skinparam componentStyle uml2
left to right direction
title Datový model E-publikace

class Library {
      String title
      String url
      String urlOfKramerius
}

class PreviewFile {
      String format
      File file
      String ISBN
}

class OriginalFile {
      String url
      String format
      File file
      String ISBN
      AlephRecord  ProperAlephRecord
}

class AlephRecord {
      File MARCXML
      String AlephSysNumber
      Bool  hasISBNAgencyFields
      Bool  hasAcquisitionFields
      Bool  hasDescriptiveCataloguingFields
      Bool  hasDescriptiveCataloguingReviewFields
      Bool  hasSubjectCataloguingFields
      Bool  hasSubjectCataloguingReviewFields
}

class Author {
      String Prijmeni_krestni_jmeno
}

class PrintingFile {
      String url
      String format
      File file
      String ISBN
}

class EPublication {
      String název  
      String podnázev
      String vazba 
      Decimal cena 
      String cast,dil     Cast(svazek,dil)
      String nazev_casti
      String nakladatel/vydavatel
      Date   datum_vydani
      String poradi_vydani
      String zpracovatel_zaznamu
      Relation librariesThatCanAccessAtLibraryTerminal
      Relation librariesThatCanAccessAtPublic
      String alephDocNumber
      Boolean generateISBN
      String kategorie_pro_RIV
      String misto_distribuce
      String distributor
      Date datum_distribuce
      Date datum_pro_copyright
      String format
      String url
      String misto_vydani
      String ISBN_souboru_publikaci
}

class EPublicationFolder {
}

class LibraryFolder {
}

Library "0..*" -- "0..*" EPublication: canAccessAtLibraryTerminal >
Library "0..*" -- "0..*" EPublication: canAccessAtPublic >
EPublication *-- "0..*" OriginalFile
EPublication *-- "0..*" PrintingFile
EPublication *-- "0..*" Author
EPublication "0..*" *-- "0..*" PreviewFile: main preview files
OriginalFile "0..*" *-- "1..*" PreviewFile
PrintingFile "0..*" *-- "1..*" PreviewFile
EPublicationFolder *-- "0..*" EPublication
LibraryFolder *-- "0..*" Library
OriginalFile *-- "0..*" AlephRecord
@enduml